--- a/p2.html
+++ b/p2.html
@@ -3,11 +3,30 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css"/>
-	<title></title>
+	<title>Login Page</title>
 	<meta charset = "UTF-8">
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<h1 id="Welcome"></h1>
+	<h1>Please log in.</h1>
+	<div class="centerinput">
+		<input type="text" id="username">
+    <br>
+		<br>
+		<input type="text" id="password">
+    <br>
+		<br>
+
+		<button type="button" value="Log in" onclick="logIn();">Log In</button>
+	</div>
+	<div class="centerinput">
+  	<p id="isUserRight"></p>
+		<p id="adminPage"></p>
+		<p id="userPage"></p>
+	</div>
+
+
+  <p>Click <a href="p1.html">here</a> to sign up.</p>
+
 </body>
 </html>
-
