Validated HTML, Added Author & Project Name

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<!-- Author: Lucas Strycker -->
+<!-- Author: Lucas Strycker
+CINS 110 Final Project -->
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css"/>
-	<title></title>
+	<title>Intro</title>
 	<meta charset = "UTF-8">
 </head>
 <body>
