--- a/p2.html
+++ b/p2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- Author: Lucas Strycker -->
+<!-- Author: Lucas Strycker
+CINS 110 Final Project -->
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css"/>
